--- a/WareHouseMgmt/src/main/resources/application.properties
+++ b/WareHouseMgmt/src/main/resources/application.properties
@@ -35,10 +35,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Diale
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 
-
-
-
-
+#When we set this to trace it also shows what is the result set of the query that was fired
+#logging.level.org.hibernate.type=TRACE
 
 #Notificatkion Engine configuration
 spring.mail.username=vaibhavdadas92@gmail.com
