--- a/WareHouseMgmt/pom.xml
+++ b/WareHouseMgmt/pom.xml
@@ -67,6 +67,14 @@
 			<artifactId>mssql-jdbc</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		
+		
+		<dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-databind</artifactId>
+		<!-- <version>2.5.3</version> -->
+		</dependency>
+		
 
 	</dependencies>
 
