--- a/.github/workflows/master_warehousemanagement.yml
+++ b/.github/workflows/master_warehousemanagement.yml
@@ -6,7 +6,7 @@ name: Build and deploy WAR app to Azure Web App - warehousemanagement
 on:
   push:
     branches:
-      - master
+      - master/WareHouseMgmt/
   workflow_dispatch:
 
 jobs:
