--- a/WareHouseMgmt/src/main/resources/application.properties
+++ b/WareHouseMgmt/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.mvc.view.suffix=.jsp
 #MySQL Connection Details  
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 #spring.datasource.url=jdbc:sqlserver://localhost\\sqlexpress;databaseName=warehouse
-spring.datasource.url=jdbc:sqlserver://CHIRAG-HERE;databaseName=warehouse
+spring.datasource.url=jdbc:sqlserver://DESKTOP-U2INR3Q;databaseName=warehouse
 spring.datasource.username=vaibhav
 spring.datasource.password=root
 
