added prod connection string

--- a/WareHouseMgmt/src/main/resources/application.properties
+++ b/WareHouseMgmt/src/main/resources/application.properties
@@ -15,9 +15,14 @@ spring.mvc.view.suffix=.jsp
 #MySQL Connection Details  
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 #spring.datasource.url=jdbc:sqlserver://localhost\\sqlexpress;databaseName=warehouse
-spring.datasource.url=jdbc:sqlserver://DESKTOP-U2INR3Q;databaseName=warehouse
-spring.datasource.username=vaibhav
-spring.datasource.password=root
+#spring.datasource.url=jdbc:sqlserver://LAPTOP-N8VFBQPV;databaseName=warehouse
+#spring.datasource.username=vaibhav
+#spring.datasource.password=root
+
+spring.datasource.url=jdbc:sqlserver://dbs-info-system.database.windows.net:1433;databaseName=warehouse
+spring.datasource.username=dbssqluser@dbs-info-system
+spring.datasource.password=dbssqlu$3r
+
 
 #spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=update
